force-app/main/default/objects/Additional_Corro_Recipients__c/Additional_Corro_Recipients__c.object-meta.xml
<CustomObject>
    <label>Additional Corro Recipient</label>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>Additional Corro Recipients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Corro Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>