force-app/main/default/objects/Additional_Corro_Recipients__c/fields/Is_Referred__c.field-meta.xml
<CustomField>
    <fullName>Is_Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Referred</description>
    <inlineHelpText>is Referred</inlineHelpText>
    <label>Referred Recipient</label>
    <type>Checkbox</type>
</CustomField>